Rename header files
This commit renames header files from .h files to .hpp files for
consistency.

Signed-off-by: Isaiah Andrade <isaiahm8679@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
-        mainwindow.h
+        mainwindow.hpp
         mainwindow.ui
 )
 
@@ -23,7 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Replica-Reaper
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-        filemanager.h filemanager.cpp
+        filemanager.hpp filemanager.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Replica-Reaper APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
