--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -4,4 +4,5 @@ filter=-build/include_subdir
 filter=-build/header_guard
 filter=-build/c++14
 filter=-build/c++17
+filter=-build/include_what_you_use
 filter=-runtime/threadsafe_fn
