added a tutorial page
Mapped a tutorial page to the How to Use button, has placeholder buttons to try downloads, desktop, pictures, and documents.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         filemanager.hpp filemanager.cpp
         FileInfo.hpp
         settings.hpp settings.cpp settings.ui
+        tutorial.hpp tutorial.cpp tutorial.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Replica-Reaper APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
