--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         FileInfo.hpp
         settings.hpp settings.cpp settings.ui
         tutorial.hpp tutorial.cpp tutorial.ui
+        assets.qrc
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Replica-Reaper APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
